# Rust-Assignments

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
enums_basic/: Cargo.toml
ex013_constants/: Cargo.toml
ex014_type_aliases/: Cargo.toml
ex015_basic_ownership/: Cargo.toml
ex016_borrowing/: Cargo.toml
ex017_mutable_references/: Cargo.toml
ex018_slices/: Cargo.toml
ex019_lifetimes_basic/: Cargo.toml
ex020_dangling_references/: Cargo.toml
ex021_methods/: Cargo.toml
ex022_associated_functions/: Cargo.toml
ex023_enum_methods/: Cargo.toml
ex024_pattern_matching_advanced/: Cargo.toml
ex025_if_let/: Cargo.toml
ex026_result_type/: Cargo.toml  hello.txt
ex027_custom_error_types/: Cargo.toml
ex028_error_propagation/: Cargo.toml
ex029_option_chaining/: Cargo.toml
ex030_unwrap_vs_expect/: Cargo.toml
ex031_vector_operations/: Cargo.toml
ex032_string_and_refstring/: Cargo.toml
ex033_hashmap/: Cargo.toml
ex034_hash_set/: Cargo.toml
ex035_iterators_basic/: Cargo.toml
ex036_trait_implementation/: Cargo.toml
ex037_generic_functions/: Cargo.toml
ex038_derive_traits/: Cargo.toml
ex040_trait_objects/: Cargo.toml
ex041_newtype_pattern/: Cargo.toml
ex042_type_state_pattern/: Cargo.toml
ex043_phantom_data/: Cargo.toml
ex044_associated_types/: Cargo.toml
ex045_high_ranked_trait_bounds/: Cargo.toml
ex046_never_type/: Cargo.toml
ex047_trait_inheritance/: Cargo.toml
ex048_supertraits/: Cargo.toml
ex049_advanced_pattern_matching/: Cargo.toml
ex050_thread/: Cargo.toml
ex051_message_passing/: Cargo.toml
ex052_shared_state/: Cargo.toml
ex053_send_sync/: Cargo.toml
ex054_atomic_operations/: Cargo.toml
ex055_scoped_threads/: Cargo.toml
ex056_rayon_parallel_iterators/: Cargo.toml
ex057_async_await/: Cargo.toml
ex058_futures/: Cargo.toml
ex059_tokio_select/: Cargo.toml
ex060_async_channels/: Cargo.toml
ex061_declarative_macros/: Cargo.toml
ex064_function_like_macros/: Cargo.toml
ex065_macro_hygiene/: Cargo.toml
ex066_token_stream_manipulation/: Cargo.toml
ex067_lifetime_elision/: Cargo.toml
ex068_struct_lifetimes/: Cargo.toml
ex069_lifetime_bounds/: Cargo.toml
ex070_higher_kinded_lifetimes/: Cargo.toml
ex071_self_referential_structs/: Cargo.toml
ex072_lifetime_subvariance/: Cargo.toml
ex073_raw_pointers/: Cargo.toml
ex074_unsafe_functions/: Cargo.toml
ex075_foreign_function_interface/: Cargo.toml  build.rs
ex076_memory_layout/: Cargo.toml
ex077_unsafe_traits/: Cargo.toml
ex078_memory_safety/: Cargo.toml
(+135 files in other folders)
