[workspace]
resolver = "3"
members = [
    "arrays",
    "basic_types",
    "control_flow",
    "enums_basic",
    "ex013_constants",
    "ex014_type_aliases",
    "ex015_basic_ownership",
    "ex016_borrowing",
    "ex017_mutable_references",
    "ex018_slices",
    "ex019_lifetimes_basic",
    "ex020_dangling_references",
    "ex021_methods",
    "ex022_associated_functions",
    "ex023_enum_methods",
    "ex024_pattern_matching_advanced",
    "ex025_if_let",
    "ex026_result_type",
    "ex027_custom_error_types",
    "ex028_error_propagation",
    "ex029_option_chaining",
    "ex030_unwrap_vs_expect",
    "ex031_vector_operations",
    "ex032_string_and_refstring",
    "ex033_hashmap",
    "ex034_hash_set",
    "ex035_iterators_basic",
    "ex036_trait_implementation",
    "ex037_generic_functions",
    "ex038_derive_traits",
    "ex040_trait_objects",
    "ex041_newtype_pattern",
    "ex042_type_state_pattern",
    "ex043_phantom_data",
    "ex044_associated_types",
    "ex045_high_ranked_trait_bounds",
    "ex046_never_type",
    "ex047_trait_inheritance",
    "ex048_supertraits",
    "ex049_advanced_pattern_matching",
    "ex050_thread",
    "ex051_message_passing",
    "ex052_shared_state",
    "ex053_send_sync",
    "ex054_atomic_operations",
    "ex055_scoped_threads",
    "ex056_rayon_parallel_iterators",
    "ex057_async_await",
    "ex058_futures",
    "ex059_tokio_select",
    "ex060_async_channels",
    "ex061_declarative_macros",
    "ex062_procedural_macros/my_trait",
    "ex062_procedural_macros/my_derive",
    "ex062_procedural_macros/example_usage",
    "ex063_attribute_macros/my_trait_b",
    "ex063_attribute_macros/my_derive_b",
    "ex063_attribute_macros/example_usage_b",
    "ex064_function_like_macros",
    "ex065_macro_hygiene",
    "ex066_token_stream_manipulation",
    "ex067_lifetime_elision",
    "ex068_struct_lifetimes",
    "ex069_lifetime_bounds",
    "ex070_higher_kinded_lifetimes",
    "ex071_self_referential_structs",
    "ex072_lifetime_subvariance",
    "ex073_raw_pointers",
    "ex074_unsafe_functions",
    "ex075_foreign_function_interface",
    "ex076_memory_layout",
    "ex077_unsafe_traits",
    "ex078_memory_safety",
    "functions",
    "hello",
    "loops",
    "pattern_matching",
    "string_manipulation",
    "structs",
    "tuples",
    "variables",
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
